# RAGU

./: .gitignore  LICENSE  Makefile  README.md  basemap.py  build.py  config.py  constants.py  dzt.py  gui.py  imPick.py  ingester.py  main.py  nav.py  nose_env.yml  package.sh  project.toml  pyproject.toml  readgssi.py  requirements.txt  setup.py  tools.py  utils.py  wvPick.py
code/: config.ini  main.py  nose.yml  nose_env.yml  ragu.yml  ragu_env.yml
code/ingest/: __init__.py  ingest_cresis_rds.py  ingest_cresis_snow.py  ingest_groundhog.py  ingest_gssi.py  ingest_lrs.py  ingest_marsis.py  ingest_marsis_ipc.py  ingest_oibAK.py  ingest_pulseekko.py  ingest_rimfax.py  ingest_segy.py  ingest_sharad.py  ingest_uaf_kentech.py
code/nav/: __init__.py  gps.py  navparse.py
code/radar/: __init__.py  flags.py  ingester.py  pick.py  processing.py  readgssi.py
code/tools/: constants.py  export.py  nav.py  utils.py
code/ui/: __init__.py  basemap.py  gui.py  imPick.py  impick.py  note.py  notepad.py  wvPick.py  wvpick.py
dat/mars/: dsmap.cat  mega90n000eb.lbl
docs/: pick.fmt
functions/: draw.py  lineBuilder.py  run.py  test.py  tk_key.py  tk_key_debug.py
mscEdit/: Ingester.py  main.py  requirements.txt
recs/: 20140524-200130.py
src/ingest/: __init__.py  ingest_cresis_snow.py  ingest_groundhog.py  ingest_gssi.py  ingest_marsis.py  ingest_marsis_ipc.py  ingest_pulseekko.py  ingest_rimfax.py  ingest_sharad.py  ingest_template.py  ingest_uaf_kentech.py
src/radar/: __init__.py  processing.py
src/ragu/: config.py
src/ragu.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ragu/ingest/: __init__.py  ingest_cresis_rds.py  ingest_cresis_snow.py  ingest_groundhog.py  ingest_gssi.py  ingest_lrs.py  ingest_marsis.py  ingest_marsis_ipc.py  ingest_oibAK.py  ingest_pulseekko.py  ingest_rimfax.py  ingest_sharad.py  ingest_template.py
src/ragu/nav/: gps.py  navparse.py
src/ragu/radar/: __init__.py  processing.py
src/ragu/tools/: constants.py  export.py
src/ragu/ui/: __init__.py  basemap.py  gui.py  impick.py  wvpick.py
src/tools/: constants.py  export.py
src/ui/: gui.py  notepad.py
