[project]
name = "ragu"
version = "0.1.46"
description = "Radar Analysis Graphical Utility (RAGU)"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE.txt"}
authors = [
     {name = "Brandon Tober", email = "tobers.brandon@gmail.com"},
     {name = "Michael Christoffersen", email = "mchristo28@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "matplotlib",
    "rasterio",
    "pyproj",
    "tk",
    "h5py",
    "geopandas"
]

[project.urls]
documentation = "https://github.com/btobers/ragu/wiki"
repository = "https://github.com/btobers/ragu"

[project.scripts]
ragu = "ragu.bin.ragu:main"

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
"ragu.recs" = ["*.png", "*.jpg"]
"ragu.dat" = ["*/*.tif"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
